feat : 커뮤니티 글 작성 자신의 앨범에서 사진 업로드 하기 #47

--- a/app/src/main/res/layout/fragment_product_registration.xml
+++ b/app/src/main/res/layout/fragment_product_registration.xml
@@ -106,7 +106,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="none"
-                    app:simpleItems="@array/categoryList" />
+                    app:simpleItems="@array/productRegistrationCategoryList" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <FrameLayout
