feat : FAQ 리스트 카테고리 필터링

--- a/app/src/main/res/layout/fragment_order_history_detail.xml
+++ b/app/src/main/res/layout/fragment_order_history_detail.xml
@@ -89,6 +89,7 @@
                     android:nestedScrollingEnabled="false" />
 
                 <LinearLayout
+                    android:id="@+id/layoutItemButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="8dp"
