--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -112,43 +112,50 @@
                 android:layout_height="wrap_content"
                 android:text="성별" />
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/userInfoChipgroup"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginBottom="16dp"
-                app:selectionRequired="true"
-                app:singleSelection="true">
+                android:orientation="horizontal">
 
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chipMale"
-                    style="@style/Widget.Material3.Chip.Suggestion"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:text="남성"
-                    android:textAlignment="center"
-                    app:chipSpacingHorizontal="42dp" />
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/userInfoChipgroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    app:selectionRequired="true"
+                    app:singleLine="true"
+                    app:singleSelection="true">
 
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chipFemale"
-                    style="@style/Widget.Material3.Chip.Suggestion"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:text="여성"
-                    android:textAlignment="center"
-                    app:chipSpacingHorizontal="42dp" />
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/chipMale"
+                        style="@style/Widget.Material3.Chip.Suggestion"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:text="남성"
+                        android:textAlignment="center"
+                        app:chipSpacingHorizontal="42dp" />
 
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chipNone"
-                    style="@style/Widget.Material3.Chip.Suggestion"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:text="선택안함"
-                    android:textAlignment="center"
-                    app:chipSpacingHorizontal="42dp" />
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/chipFemale"
+                        style="@style/Widget.Material3.Chip.Suggestion"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:text="여성"
+                        android:textAlignment="center"
+                        app:chipSpacingHorizontal="42dp" />
 
-            </com.google.android.material.chip.ChipGroup>
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/chipNone"
+                        style="@style/Widget.Material3.Chip.Suggestion"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:text="선택안함"
+                        android:textAlignment="center"
+                        app:chipSpacingHorizontal="42dp" />
+
+                </com.google.android.material.chip.ChipGroup>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/userInfoHolder2"
@@ -159,7 +166,8 @@
             <RadioGroup
                 android:id="@+id/userInfoRadiogroup"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:checkedButton="@id/radioAlways">
 
                 <RadioButton
                     android:id="@+id/radioAlways"
@@ -168,7 +176,7 @@
                     android:text="언제든 가능해요" />
 
                 <RadioButton
-                    android:id="@+id/radioButton2"
+                    android:id="@+id/radioSelect"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="아래 시간대만 가능해요" />
@@ -178,9 +186,8 @@
                 android:id="@+id/linearWhenSelected"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
                 android:orientation="horizontal"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputStart"
@@ -225,6 +232,7 @@
                 style="@style/Widget.Material3.Button.ElevatedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="다음" />
         </LinearLayout>
     </ScrollView>
