design : community CoordinatorLayout으로 변경

--- a/app/src/main/res/layout/fragment_order_history.xml
+++ b/app/src/main/res/layout/fragment_order_history.xml
@@ -22,6 +22,7 @@
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbars="none"
             android:paddingLeft="16dp">
 
             <com.google.android.material.chip.ChipGroup
