feat: #51 반려견 정보 수정화면
- AddPetFragment에서 isAdd를 argument로 받아 반려견 등록인지 수정인지 분기함

--- a/app/src/main/res/navigation/manage_pet.xml
+++ b/app/src/main/res/navigation/manage_pet.xml
@@ -2,12 +2,4 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/manage_pet"
-    app:startDestination="@id/managePetFragment">
-
-    <fragment
-        android:id="@+id/managePetFragment"
-        android:name="com.petpal.mungmate.ManagePetFragment"
-        tools:layout="@layout/fragment_manage_pet"
-        android:label="fragment_manage_pet" />
-</navigation>
+    android:id="@+id/manage_pet" />
