--- a/app/src/main/res/layout/fragment_manage_pet.xml
+++ b/app/src/main/res/layout/fragment_manage_pet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ManagePetFragment">
+    tools:context=".ui.managepet.ManagePetFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbarManagePet"
