--- a/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -18,7 +18,7 @@
         tools:layout="@layout/fragment_chat"/>
     <fragment
         android:id="@+id/item_mypage"
-        android:name="com.petpal.mungmate.MyPageFragment"
+        android:name="com.petpal.mungmate.ui.mypage.MyPageFragment"
         android:label="fragment_my_page"
         tools:layout="@layout/fragment_my_page" />
     <fragment
