design : 커뮤니티 글 수정 앨범에서 사진 가져오기 #47

--- a/app/src/main/res/layout/fragment_community_detail_modify.xml
+++ b/app/src/main/res/layout/fragment_community_detail_modify.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.community.CommunityDetailModifyFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -17,127 +17,120 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/community_modify" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/communityPostModifyTitleTextInputLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/community_post_title"
-        android:padding="@dimen/common_padding"
-        app:endIconMode="clear_text"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/communityModifyToolbar">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/communityPostWritingTitleTextInputEditText"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLength="30" />
+            android:layout_height="match_parent">
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/communityPostModifyCategory"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/common_padding"
-        android:layout_marginEnd="@dimen/common_padding"
-        android:hint="@string/community_post_writing_category"
-        app:layout_constraintEnd_toEndOf="@id/communityPostModifyTitleTextInputLayout"
-        app:layout_constraintStart_toStartOf="@id/communityPostModifyTitleTextInputLayout"
-        app:layout_constraintTop_toBottomOf="@id/communityPostModifyTitleTextInputLayout">
-
-        <AutoCompleteTextView
-            android:id="@+id/categoryItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="none" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/communityPostModifyContentTextInputLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="@dimen/common_padding"
-        android:gravity="top"
-        android:padding="@dimen/common_padding"
-        app:hintEnabled="false"
-        app:layout_constraintBottom_toTopOf="@id/communityModifyPostImageHorizontalScrollView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/communityPostModifyCategory">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/communityPostModifyContentTextInputEditText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="top"
-            android:hint="@string/community_post_writing_contentText"
-            android:maxLength="300" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/communityModifyImageButton"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:src="@drawable/add"
-        android:layout_marginStart="@dimen/common_padding"
-        app:layout_constraintStart_toStartOf="@id/communityPostModifyContentTextInputLayout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/common_padding"
-        app:layout_constraintEnd_toStartOf="@id/communityModifyPostImageHorizontalScrollView"
-        app:layout_constraintTop_toBottomOf="@id/communityPostModifyContentTextInputLayout" />
-
-
-    <HorizontalScrollView
-        android:id="@+id/communityModifyPostImageHorizontalScrollView"
-        style="@style/Widget.MaterialComponents.TimePicker.ImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_margin="@dimen/common_padding"
-        app:layout_constraintBottom_toBottomOf="@id/communityModifyImageButton"
-        app:layout_constraintStart_toEndOf="@id/communityModifyImageButton">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="@dimen/common_padding"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/communityPostModifyTitleTextInputLayout"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/common_padding"
-                android:src="@mipmap/ic_launcher" />
+                android:hint="@string/community_post_title"
+                android:padding="@dimen/common_padding"
+                app:endIconMode="clear_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:layout_width="wrap_content"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/communityPostWritingTitleTextInputEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLength="30" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/communityPostModifyCategory"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/common_padding"
                 android:layout_marginEnd="@dimen/common_padding"
-                android:src="@mipmap/ic_launcher" />
+                android:hint="@string/community_post_writing_category"
+                app:layout_constraintEnd_toEndOf="@id/communityPostModifyTitleTextInputLayout"
+                app:layout_constraintStart_toStartOf="@id/communityPostModifyTitleTextInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/communityPostModifyTitleTextInputLayout">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/common_padding"
-                android:src="@mipmap/ic_launcher" />
+                <AutoCompleteTextView
+                    android:id="@+id/categoryItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"
+                    app:simpleItems="@array/communityCategoryList" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/common_padding"
-                android:src="@mipmap/ic_launcher" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        </LinearLayout>
-    </HorizontalScrollView>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/communityPostModifyContentTextInputLayout"
+                android:layout_width="0dp"
+                android:layout_height="400dp"
+                android:layout_margin="@dimen/common_margin"
+                android:layout_marginBottom="@dimen/common_padding"
+                android:gravity="top"
+                app:hintEnabled="false"
+                app:layout_constraintBottom_toTopOf="@id/communityModifyPostImageHorizontalScrollView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/communityPostModifyCategory">
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/communityPostModifyContentTextInputEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="top"
+                    android:hint="@string/community_post_writing_contentText"
+                    android:maxLength="300" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
+                android:id="@+id/communityModifyPostImageHorizontalScrollView"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginStart="@dimen/common_margin"
+                android:layout_marginTop="@dimen/common_margin"
+                android:layout_marginEnd="@dimen/common_margin"
+                android:layout_marginBottom="@dimen/common_margin"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/communityPostModifyContentTextInputLayout">
+
+                <Button
+                    android:id="@+id/communityModifyImageButton"
+                    style="@style/Widget.Material3.Button.IconButton.Outlined"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginEnd="5dp"
+                    android:insetLeft="0dp"
+                    android:insetTop="0dp"
+                    android:insetRight="0dp"
+                    android:insetBottom="0dp"
+                    android:text="@string/main_image_count"
+                    app:cornerRadius="5dp"
+                    app:icon="@drawable/image"
+                    app:iconGravity="textTop"
+                    app:iconPadding="5dp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/communityModifyImageRecyclerView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:isScrollContainer="true"
+                    android:orientation="horizontal" />
+
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
