--- a/app/src/main/res/layout/fragment_community_writing.xml
+++ b/app/src/main/res/layout/fragment_community_writing.xml
@@ -73,9 +73,9 @@
                 android:id="@+id/communityPostWritingContentTextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
+                android:layout_margin="@dimen/common_margin"
                 android:layout_marginBottom="@dimen/common_padding"
                 android:gravity="top"
-                android:layout_margin="@dimen/common_margin"
                 app:hintEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,11 +98,11 @@
                 android:layout_marginStart="@dimen/common_margin"
                 android:layout_marginTop="@dimen/common_margin"
                 android:layout_marginEnd="@dimen/common_margin"
+                android:layout_marginBottom="@dimen/common_margin"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="@dimen/common_margin"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/communityPostWritingContentTextInputLayout">
 
@@ -128,9 +128,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:isScrollContainer="true"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal" />
 
-                </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
