--- a/app/src/main/res/layout/fragment_add_pet.xml
+++ b/app/src/main/res/layout/fragment_add_pet.xml
@@ -195,7 +195,7 @@
                 android:id="@+id/buttonPetComplete"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="가입하기" />
+                android:text="등록하" />
 
         </LinearLayout>
     </ScrollView>
