다음 Fragment popBackStack 리스너

--- a/app/src/main/res/layout/fragment_f_a_q.xml
+++ b/app/src/main/res/layout/fragment_f_a_q.xml
@@ -14,7 +14,7 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:navigationIcon="@drawable/arrow_back_24px"
-        app:title="FAQ" />
+        app:title="FAQ"></com.google.android.material.appbar.MaterialToolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
