feat : 채팅 레이아웃 구조 변경, ui 추가

--- a/app/src/main/res/layout/fragment_walk_history.xml
+++ b/app/src/main/res/layout/fragment_walk_history.xml
@@ -157,7 +157,7 @@
 
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textViewAcceptDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
