--- a/app/src/main/res/layout/fragment_walk_history_detail.xml
+++ b/app/src/main/res/layout/fragment_walk_history_detail.xml
@@ -187,7 +187,7 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/textView4"
+                                android:id="@+id/textViewRequestDate"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="메이트"
