--- a/app/src/main/res/layout/row_place_review.xml
+++ b/app/src/main/res/layout/row_place_review.xml
@@ -51,7 +51,7 @@
             android:layout_gravity="right">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/textViewRequestDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
