--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -427,7 +427,7 @@
                 android:paddingEnd="16dp">
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/textViewRequestPlace"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginTop="8dp"
