--- a/app/src/main/res/layout/row_chat_walk_mate_accept.xml
+++ b/app/src/main/res/layout/row_chat_walk_mate_accept.xml
@@ -28,7 +28,7 @@
                 app:civ_border_overlay="true" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textViewAcceptDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -38,7 +38,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textviewAcceptMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
