--- a/app/src/main/res/layout/fragment_chat_room.xml
+++ b/app/src/main/res/layout/fragment_chat_room.xml
@@ -81,35 +81,27 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp" />
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewMessage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewMessage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="8dp" />
-
-        </LinearLayout>
-    </ScrollView>
+        android:layout_weight="1"
+        android:padding="16dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayoutMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:boxCornerRadiusBottomEnd="30dp"
+            app:boxCornerRadiusBottomStart="30dp"
+            app:boxCornerRadiusTopEnd="30dp"
+            app:boxCornerRadiusTopStart="30dp"
             app:endIconDrawable="@drawable/send_24px"
             app:endIconMode="custom"
             app:hintEnabled="false">
@@ -118,7 +110,9 @@
                 android:id="@+id/textInputEditTextMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="메시지를 입력하세요." />
+                android:hint="메시지를 입력하세요."
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
