--- a/app/src/main/res/layout/row_inquiry.xml
+++ b/app/src/main/res/layout/row_inquiry.xml
@@ -27,16 +27,18 @@
                 android:text="[포인트] 포인트가 누락됐어요.."
                 android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chipInquiryStatus"
-                style="@style/Widget.Material3.Chip.Suggestion"
+            <TextView
+                android:id="@+id/text_view_inquiry_state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:clickable="false"
-                android:focusable="false"
+                android:background="@drawable/background_inquiry_status"
+                android:paddingStart="8dp"
+                android:paddingTop="4dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="4dp"
                 android:text="답변완료"
-                app:chipMinTouchTargetSize="32dp" />
+                android:textColor="@color/md_theme_dark_inversePrimary" />
 
             <ImageView
                 android:id="@+id/imageViewInquiryExpand"
@@ -68,10 +70,6 @@
             android:paddingEnd="16dp"
             android:paddingBottom="16dp"
             android:text="산책을 끝냈는데도 포인트가 안들어왔어요ㅠㅠ\n확인 부탁드립니다.." />
-
-        <com.google.android.material.divider.MaterialDivider
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:id="@+id/layoutInquiryAnswer"
