내 위치 근처 마커-> 프래그먼트 이동 후 재진입시 마커 사라지는 버그fix

--- a/app/src/main/res/layout/fragment_write_place_review.xml
+++ b/app/src/main/res/layout/fragment_write_place_review.xml
@@ -49,7 +49,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/common_margin"
         android:numStars="5"
-        android:rating="4.5" />
+        android:rating="3" />
 
     <TextView
         android:id="@+id/textViewPlaceReviewAnnouncement2"
@@ -68,6 +68,7 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextReviewContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="top"
