--- a/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
+++ b/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
@@ -26,8 +26,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="left"
-                android:text="부천 동물병원"
+                android:gravity="start"
+                android:text=""
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <RatingBar
@@ -35,10 +35,21 @@
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="4dp"
+                android:layout_gravity="end|center"
+                android:layout_marginStart="4dp"
                 android:numStars="5"
                 android:rating="4.5" />
+
+            <TextView
+                android:id="@+id/textViewratingbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"
+                android:gravity="start"
+                android:text="4.5"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
         </LinearLayout>
 
         <LinearLayout
@@ -74,7 +85,7 @@
                     android:drawableLeft="@drawable/reviews_24px"
                     android:drawablePadding="8dp"
                     android:isScrollContainer="false"
-                    android:text="200개의 리뷰가 있습니다" />
+                    android:text="" />
 
                 <TextView
                     android:id="@+id/textViewPlaceFavoriteCount"
@@ -98,29 +109,33 @@
             android:layout_marginRight="8dp">
 
             <LinearLayout
+                android:id="@+id/layoutReview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="120dp"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/textViewNoReview"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:text="등록된 리뷰가 없습니다."
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:visibility="gone" />
 
-                    <RatingBar
-                        android:id="@+id/placeUserRatingBar1"
-                        style="@style/Widget.AppCompat.RatingBar.Small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:numStars="5"
-                        android:rating="4.5" />
-                </LinearLayout>
+                <RatingBar
+                    android:id="@+id/placeUserRatingBar1"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="4.5"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/placeUserReview1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="수의사님이 친절하시고 시설도 좋습니다!" />
+                    android:visibility="visible" />
 
                 <RatingBar
                     android:id="@+id/placeUserRatingBar2"
@@ -128,18 +143,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:numStars="5"
-                    android:rating="1" />
+                    android:rating="1"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/placeUserReview2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="과잉진료를 받았습니다.." />
+                    android:visibility="visible" />
 
                 <Button
                     android:id="@+id/buttonSubmitReview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:text="리뷰 등록하기" />
