바텀시트 favorite ui,클릭시 db에 추가, count 받아서 출력

--- a/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
+++ b/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
@@ -124,6 +124,7 @@
                     android:id="@+id/textViewNoReview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="40dp"
                     android:text="등록된 리뷰가 없습니다."
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:visibility="gone" />
